--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "fabric>=3.2.2",
+    "ipykernel>=6.30.1",
     "mcp[cli]>=1.16.0",
+    "python-dotenv>=1.1.1",
 ]
